--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -1,10 +1,3 @@
-name: Nightly DB backup
-
-on:
-  schedule:
-    - cron: "0 4 * * *"   # 04:00 UTC nightly
-  workflow_dispatch:
-
 jobs:
   dump:
     runs-on: ubuntu-latest
@@ -12,11 +5,22 @@ jobs:
       - name: Checkout (optional)
         uses: actions/checkout@v4
 
-      # ---- connectivity check (fails fast if secrets are wrong) ----
+      # ↓ Add this DNS check step here
+      - name: DNS check for PGHOST
+        env:
+          PGHOST: ${{ secrets.PGHOST }}
+        run: |
+          docker run --rm -e PGHOST busybox sh -lc '
+            echo "PGHOST=$PGHOST";
+            nslookup "$PGHOST" || echo "nslookup failed";
+            getent hosts "$PGHOST" || echo "getent failed"
+          '
+
+      # Existing connectivity check
       - name: psql connectivity check
         env:
           PGHOST:     ${{ secrets.PGHOST }}
-          PGPORT:     ${{ secrets.PGPORT }}        # 5432
+          PGPORT:     ${{ secrets.PGPORT }}
           PGUSER:     ${{ secrets.PGUSER }}
           PGPASSWORD: ${{ secrets.PGPASSWORD }}
           PGDATABASE: ${{ secrets.PGDATABASE }}
@@ -26,7 +30,7 @@ jobs:
             -e PGHOST -e PGPORT -e PGUSER -e PGPASSWORD -e PGDATABASE -e PGSSLMODE \
             postgres:17 bash -lc 'psql -c "\conninfo"'
 
-      # ---- dump using pg_dump 17 inside Docker ----
+      # Dump step…
       - name: Dump with dockerized pg_dump 17
         env:
           PGHOST:     ${{ secrets.PGHOST }}
@@ -39,10 +43,3 @@ jobs:
           docker run --rm -v "$PWD:/dump" \
             -e PGHOST -e PGPORT -e PGUSER -e PGPASSWORD -e PGDATABASE -e PGSSLMODE \
             postgres:17 bash -lc 'pg_dump --format=custom --no-owner -f /dump/backup.dump'
-
-      - name: Upload backup artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: db-backup
-          path: backup.dump
-          if-no-files-found: error
