--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -1,14 +1,16 @@
+name: Nightly DB backup
+on:
+  schedule: [{ cron: "0 4 * * *" }]
+  workflow_dispatch:
+
 jobs:
   dump:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout (optional)
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # ↓ Add this DNS check step here
       - name: DNS check for PGHOST
-        env:
-          PGHOST: ${{ secrets.PGHOST }}
+        env: { PGHOST: ${{ secrets.PGHOST }} }
         run: |
           docker run --rm -e PGHOST busybox sh -lc '
             echo "PGHOST=$PGHOST";
@@ -16,7 +18,6 @@ jobs:
             getent hosts "$PGHOST" || echo "getent failed"
           '
 
-      # Existing connectivity check
       - name: psql connectivity check
         env:
           PGHOST:     ${{ secrets.PGHOST }}
@@ -30,7 +31,6 @@ jobs:
             -e PGHOST -e PGPORT -e PGUSER -e PGPASSWORD -e PGDATABASE -e PGSSLMODE \
             postgres:17 bash -lc 'psql -c "\conninfo"'
 
-      # Dump step…
       - name: Dump with dockerized pg_dump 17
         env:
           PGHOST:     ${{ secrets.PGHOST }}
@@ -43,3 +43,9 @@ jobs:
           docker run --rm -v "$PWD:/dump" \
             -e PGHOST -e PGPORT -e PGUSER -e PGPASSWORD -e PGDATABASE -e PGSSLMODE \
             postgres:17 bash -lc 'pg_dump --format=custom --no-owner -f /dump/backup.dump'
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: db-backup
+          path: backup.dump
+          if-no-files-found: error
