--- a/.github/workflows/supabase-dump.yml
+++ b/.github/workflows/supabase-dump.yml
@@ -1,21 +1,11 @@
 name: Supabase DB Dump
 
 on:
-  workflow_dispatch: {}   # run manually from the Actions tab
-  # schedule:             # (optional) uncomment to run nightly at 02:00 UTC
-  #   - cron: "0 2 * * *"
+  workflow_dispatch: {}
 
 jobs:
   dump:
     runs-on: ubuntu-latest
-
-    env:
-      POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}       # e.g. db.xxxxx.supabase.co
-      POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}       # set this secret to 5432
-      POSTGRES_DB:   ${{ secrets.POSTGRES_DB }}         # usually "postgres" unless you created another
-      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}       # usually "postgres"
-      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-
     steps:
       - name: Checkout (optional)
         uses: actions/checkout@v4
@@ -26,17 +16,21 @@ jobs:
           sudo apt-get install -y postgresql-client
 
       - name: Dump Supabase database (SSL required)
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           set -e
-          export PGPASSWORD="$POSTGRES_PASSWORD"
+          # Ensure sslmode=require is present
+          if [[ "$DATABASE_URL" == *"?"* ]]; then
+            CONN_STR="${DATABASE_URL}&sslmode=require"
+          else
+            CONN_STR="${DATABASE_URL}?sslmode=require"
+          fi
+
           TS=$(date -u +'%Y%m%dT%H%M%SZ')
           FILE="supabase_dump_${TS}.dump"
 
-          # Use a direct connection (NOT the pooler) and force SSL
-          pg_dump "host=${POSTGRES_HOST} port=${POSTGRES_PORT} dbname=${POSTGRES_DB} user=${POSTGRES_USER} sslmode=require" \
-            --format=custom --no-owner --no-privileges \
-            -f "$FILE"
-
+          pg_dump "$CONN_STR" --format=custom --no-owner --no-privileges -f "$FILE"
           echo "Created dump: $FILE"
           ls -lh "$FILE"
 
