--- a/.github/workflows/supabase-dump.yml
+++ b/.github/workflows/supabase-dump.yml
@@ -6,32 +6,31 @@ on:
 jobs:
   dump:
     runs-on: ubuntu-latest
+
+    env:
+      POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}       # e.g. db.xxxxx.supabase.co
+      POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}       # 5432
+      POSTGRES_DB:   ${{ secrets.POSTGRES_DB }}         # usually "postgres"
+      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}       # usually "postgres"
+      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+
     steps:
       - name: Checkout (optional)
         uses: actions/checkout@v4
 
-      - name: Install PostgreSQL client
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y postgresql-client
-
-      - name: Dump Supabase database (SSL required)
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      - name: Dump using Postgres 17 (Docker) with SSL
         run: |
           set -e
-          # Ensure sslmode=require is present
-          if [[ "$DATABASE_URL" == *"?"* ]]; then
-            CONN_STR="${DATABASE_URL}&sslmode=require"
-          else
-            CONN_STR="${DATABASE_URL}?sslmode=require"
-          fi
-
           TS=$(date -u +'%Y%m%dT%H%M%SZ')
           FILE="supabase_dump_${TS}.dump"
 
-          pg_dump "$CONN_STR" --format=custom --no-owner --no-privileges -f "$FILE"
-          echo "Created dump: $FILE"
+          docker run --rm \
+            -e PGPASSWORD="${POSTGRES_PASSWORD}" \
+            -v "$PWD:/out" \
+            postgres:17-alpine \
+            sh -c 'pg_dump "host='"${POSTGRES_HOST}"' port='"${POSTGRES_PORT}"' dbname='"${POSTGRES_DB}"' user='"${POSTGRES_USER}"' sslmode=require" \
+                   --format=custom --no-owner --no-privileges -f /out/'"$FILE"
+
           ls -lh "$FILE"
 
       - name: Upload dump artifact
