--- a/.github/workflows/supabase-dump.yml
+++ b/.github/workflows/supabase-dump.yml
@@ -6,18 +6,14 @@ on:
 jobs:
   dump:
     runs-on: ubuntu-latest
-
     env:
-      POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}       # e.g. db.xxxxx.supabase.co
-      POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}       # 5432
-      POSTGRES_DB:   ${{ secrets.POSTGRES_DB }}         # usually "postgres"
-      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}       # usually "postgres"
+      POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+      POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
+      POSTGRES_DB:   ${{ secrets.POSTGRES_DB }}
+      POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
 
     steps:
-      - name: Checkout (optional)
-        uses: actions/checkout@v4
-
       - name: Dump using Postgres 17 (Docker) with SSL
         run: |
           set -e
