--- a/foundry.toml
+++ b/foundry.toml
@@ -1,14 +1,14 @@
-// SPDX-License-Identifier: MIT
-pragma solidity ^0.8.24;
+[profile.default]
+src = "contracts"
+out = "out"
+libs = ["lib"]
+remappings = [
+  "forge-std/=lib/forge-std/src/",
+  "openzeppelin-contracts/=lib/openzeppelin-contracts/"
+]
 
-import {ERC20}  from "openzeppelin-contracts/contracts/token/ERC20/ERC20.sol";
-import {Ownable} from "openzeppelin-contracts/contracts/access/Ownable.sol";
+[rpc_endpoints]
+amoy = "${RPC_URL}"
 
-contract VIRD is ERC20, Ownable {
-    constructor() ERC20("Virdato", "VIRD") Ownable(msg.sender) {
-        _mint(msg.sender, 1_000_000 ether); // bootstrap supply for testing
-    }
-    function mint(address to, uint256 amount) external onlyOwner {
-        _mint(to, amount);
-    }
-}
+[etherscan]
+amoy = { key = "${POLYGONSCAN_API_KEY}" }
