--- a/.github/workflows/pg_dump.yml
+++ b/.github/workflows/pg_dump.yml
@@ -2,7 +2,7 @@ name: pg-dump
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 7 * * *"
+    - cron: "0 7 * * *"  # daily at 07:00 UTC
 
 jobs:
   dump:
@@ -13,17 +13,25 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y postgresql-client
 
-      - name: Verify connectivity
+      - name: Show target (masked) & DNS check
+        env:
+          PGHOST: ${{ secrets.PGHOST }}
+        run: |
+          set -euo pipefail
+          echo "Checking DNS for PGHOST..."
+          getent hosts "$PGHOST" || (echo "DNS could not resolve PGHOST=$PGHOST" && exit 2)
+
+      - name: Verify connectivity (Supabase requires TLS)
         env:
           PGHOST: ${{ secrets.PGHOST }}
           PGPORT: ${{ secrets.PGPORT }}
           PGUSER: ${{ secrets.PGUSER }}
           PGPASSWORD: ${{ secrets.PGPASSWORD }}
           PGDATABASE: ${{ secrets.PGDATABASE }}
-          PGSSLMODE: ${{ vars.PGSSLMODE || 'require' }}   # <— default if not set
+          PGSSLMODE: require
         run: |
           set -euo pipefail
-          export PGSSLMODE="${PGSSLMODE:-require}"        # <— guard empty values
+          export PGSSLMODE="${PGSSLMODE:-require}"
           psql -c "select version(), current_user, current_database();" -v ON_ERROR_STOP=1
 
       - name: Dump database
@@ -33,10 +41,9 @@ jobs:
           PGUSER: ${{ secrets.PGUSER }}
           PGPASSWORD: ${{ secrets.PGPASSWORD }}
           PGDATABASE: ${{ secrets.PGDATABASE }}
-          PGSSLMODE: ${{ vars.PGSSLMODE || 'require' }}   # <— default if not set
+          PGSSLMODE: require
         run: |
           set -euo pipefail
-          export PGSSLMODE="${PGSSLMODE:-require}"
           ts="$(date -u +%Y%m%dT%H%M%SZ)"
           pg_dump --format=custom --no-owner --no-privileges --blobs --verbose \
             -f "dump_${ts}.pgcustom"
@@ -47,3 +54,4 @@ jobs:
           name: pg-dump
           path: dump_*.pgcustom
           retention-days: 14
+
