--- a/virdato-web/package.json
+++ b/virdato-web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@magic-sdk/admin": "^2.8.2",
+    "@next/font": "^14.2.15",
     "ethers": "^6.15.0",
     "magic-sdk": "^31.1.0",
     "next": "16.0.1",
