--- a/virdato-web/package.json
+++ b/virdato-web/package.json
@@ -12,6 +12,7 @@
     "@magic-sdk/admin": "^2.8.2",
     "@next/font": "^14.2.15",
     "ethers": "^6.15.0",
+    "geist": "^1.5.1",
     "magic-sdk": "^31.1.0",
     "next": "16.0.1",
     "react": "19.2.0",
