--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -12,29 +12,26 @@ on:
 jobs:
   foundry:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # Use the stable Foundry toolchain (avoids nightly flag changes)
       - name: Install Foundry (stable)
         uses: foundry-rs/foundry-toolchain@v1
         with:
           version: stable
 
-      # Install libs into ./lib (idempotent; won't fail if already present)
       - name: Install deps
         run: |
-          forge --version
           mkdir -p lib
           forge install foundry-rs/forge-std@v1.9.5 || true
           forge install OpenZeppelin/openzeppelin-contracts@v5.0.2 || true
+          echo "--- lib tree ---"
+          ls -la lib/forge-std/src || true
+          ls -la lib/openzeppelin-contracts || true
 
-      # Build the contracts
       - name: Build
         run: forge build --sizes
 
-      # Optional: run tests (won't fail the job if none exist yet)
-      - name: Test
+      - name: Test (optional)
         run: forge test -vvv || true
