--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,34 @@
-name: foundry
+name: deploy
+
 on:
   push:
-    paths: ["contracts/**","script/**","foundry.toml",".github/workflows/foundry.yml"]
-  pull_request:
-jobs:
-  foundry:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: foundry-rs/foundry-toolchain@v1
-        with: { version: stable }
-      - name: Install deps
-        run: |
-          mkdir -p lib
-          forge install foundry-rs/forge-std@v1.9.5 || true
-          forge install OpenZeppelin/openzeppelin-contracts@v5.0.2 || true
-      - name: Build
-        run: forge build --sizes
-      - name: Test (optional)
-        run: forge test -vvv || true
+    branches:
+      - web/add-virdato-web     # or 'main' after you merge the web app
+    paths:
+      - 'virdato-web/**'
+      - '.github/workflows/deploy.yml'
+  workflow_dispatch:
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: virdato-web   # <<< run inside the Next app
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: 'virdato-web/package-lock.json'
+
+      - name: Install deps
+        run: npm install                  # <<< NOT npm ci
+
+      - name: Build
+        run: npm run build
