--- a/.github/workflows/weekly-full-db-dump.yml
+++ b/.github/workflows/weekly-full-db-dump.yml
@@ -1,34 +1,7 @@
-- name: Full dump via Docker (Postgres 17)
-  env:
-    # required repository secrets
-    PGPASSWORD: ${{ secrets.DB_PASSWORD_SUPER }}
-    DB_HOST:     ${{ secrets.DB_HOST }}
-    DB_NAME:     ${{ secrets.DB_NAME }}
-    DB_USER:     ${{ secrets.DB_USER }}
-    DB_PORT:     ${{ secrets.DB_PORT || '5432' }}
-    # optional secret; if not set we’ll default to 'require'
-    DB_SSLMODE:  ${{ secrets.DB_SSLMODE }}
-  run: |
-    set -euo pipefail
-
-    # Default SSL mode if not provided by secrets
-    SSLMODE="${DB_SSLMODE:-require}"
-
-    echo "▶ Using Host=$DB_HOST Port=$DB_PORT DB=$DB_NAME User=$DB_USER SSL=$SSLMODE"
-
-    # 1) Quick auth probe (tests user/password + network)
-    docker run --rm -e PGPASSWORD="$PGPASSWORD" postgres:17-alpine \
-      psql "host=$DB_HOST port=$DB_PORT user=$DB_USER dbname=$DB_NAME sslmode=$SSLMODE" \
-      -c "select current_user, now();"
-
-    # 2) Build a URI and pass it into the container as an env var
-    DB_URI="postgresql://${DB_USER}:${PGPASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=${SSLMODE}"
-
-    docker run --rm \
-      -e PGPASSWORD="$PGPASSWORD" \
-      -e DB_URI="$DB_URI" \
-      postgres:17-alpine \
-      sh -c 'pg_dump --dbname="$DB_URI" -F c -v' \
-      > dump_$(date -u +%Y%m%d).sqlc
-
-    ls -lh dump_*.sqlc
+name: yaml-smoke-test
+on: workflow_dispatch
+jobs:
+  ok:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "YAML OK"
