--- a/.github/workflows/weekly-full-db-dump.yml
+++ b/.github/workflows/weekly-full-db-dump.yml
@@ -1,7 +1,43 @@
-name: yaml-smoke-test
-on: workflow_dispatch
+name: weekly-full-db-dump
+
+on:
+  schedule:
+    - cron: "0 3 * * 1"    # Mondays at 03:00 UTC
+  workflow_dispatch:
+
 jobs:
-  ok:
+  full-dump:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "YAML OK"
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Full dump via Docker (Postgres 17)
+        env:
+          PGPASSWORD: ${{ secrets.DB_PASSWORD_SUPER }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PORT: ${{ secrets.DB_PORT || '5432' }}
+          DB_SSLMODE: ${{ secrets.DB_SSLMODE || 'require' }}
+        run: |
+          set -euo pipefail
+
+          echo "▶ Using Host=$DB_HOST Port=$DB_PORT DB=$DB_NAME User=$DB_USER SSL=$DB_SSLMODE"
+
+          # 1) Quick auth probe
+          docker run --rm -e PGPASSWORD="$PGPASSWORD" postgres:17-alpine \
+            psql "host=$DB_HOST port=$DB_PORT user=$DB_USER dbname=$DB_NAME sslmode=$DB_SSLMODE" \
+            -c "select current_user, now();"
+
+          # 2) Perform full dump
+          DB_URI="postgresql://${DB_USER}:${PGPASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=${DB_SSLMODE}"
+
+          docker run --rm \
+            -e PGPASSWORD="$PGPASSWORD" \
+            -e DB_URI="$DB_URI" \
+            postgres:17-alpine \
+            sh -c 'pg_dump --dbname="$DB_URI" -F c -v' \
+            > dump_$(date -u +%Y%m%d).sqlc
+
+          ls -lh dump_*.sqlc
